[package]
name = "sce_parser"
version = "0.3.3"
edition = "2021"
description = "SCE Parser compiled to WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Request", "RequestInit", "RequestMode", "Response"] }
js-sys = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

scraper = "0.18"

# ✅ Исправленный блок с рандомом
rand = { version = "0.8.5", default-features = false, features = ["std_rng", "getrandom"] }
getrandom = { version = "0.2.16", default-features = false, features = ["js"] }

[patch.crates-io]
getrandom = { version = "0.2.16" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
