[package]
name = "sce_parser"
version = "0.3.3"
edition = "2021"
description = "SCE Parser compiled to WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# --- WebAssembly bindings ---
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Request", "RequestInit", "RequestMode", "Response"] }
js-sys = "0.3"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- HTML parser ---
scraper = "0.18"

# --- Random numbers (WebAssembly safe) ---
getrandom = { version = "0.2.16", features = ["js"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "getrandom"] }

# --- Misc ---
log = "0.4"
cfg-if = "1.0"
once_cell = "1.21"

[patch.crates-io]
getrandom = { version = "0.2.16", features = ["js"] }
